<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".view.fragment.userCycle.splash2">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8000"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingStart="@dimen/_15sdp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_solash2_login_btu"
            android:text="@string/login_text"
            android:gravity="center"
            android:elevation="3dp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/shap1_buttom_blue"
            android:textColor="@color/white"
            android:textAllCaps="false"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:gravity="center"
            app:backgroundTint="@null"
            android:id="@+id/fragment_solash2_rejester_btu"
            android:elevation="3dp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:background="@drawable/no_background_buttom"
            android:textAllCaps="false"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Skip"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:id="@+id/Fragment_splash2_skip"
            android:layout_marginTop="@dimen/_12sdp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="العربية"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white"
        android:layout_marginEnd="@dimen/_54sdp"
        android:layout_marginStart="@dimen/_54sdp"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_55sdp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/_15sdp"
    android:paddingEnd="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:paddingBottom="@dimen/_55sdp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:layout_gravity="center"
        android:elevation="@dimen/_1sdp"
        android:padding="@dimen/_20sdp"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/logo"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_enter_app"
        android:gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        />

</LinearLayout>
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/_25sdp"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="Developed by"
            android:textSize="@dimen/_9ssp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="code-Pro  For Digital Solutions"
                android:textSize="@dimen/_9ssp"
                />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>

</ScrollView>